css/styles.css
/*
A custom Bootstrap 3.1 template
from http://bootply.com

This CSS code should follow the 'bootstrap.css'
in your HTML file.

license: MIT
author: bootply.com
*/

html,body {
	height:100%;
    background:center no-repeat fixed url('/assets/example/bg_suburb.jpg');
    background-size: cover;
}

.icon-bar {
	background-color:#fff;
}

.navbar-trans {
	background-color:#279ddd;
    color:#fff;
}

.navbar-trans li>a:hover,.navbar-trans li>a:focus,.navbar-trans li.active {
	background-color:#38afef;
}

.navbar-trans a{
    color:#fefefe;
}

.navbar-trans .form-control:focus {
	border-color: #eee;
	outline: 0;
	-webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
	box-shadow: inset 0 1px 1px rgba(0,0,0,0.075),0 0 8px rgba(100,100,100,0.6);
}

section {
	padding-top:70px;
    padding-bottom:50px;
    min-height:calc(100% - 1px);
}

.v-center {
    padding-top:10%;
    font-size:70px;
}

.well {
	border-color:transparent;
}

a.list-group-item.active,[class*='-info'] {
	background-color: #168ccc;
    color:#fff;
}

#section1 {
	background-color: #168ccc;
    color:#dedeff;
}

#section2 {
	background-color: #e5e5ef;
    color:#686868;
}

#section3 {
	background-color: #168ccc;
    color:#ddd;
}

#section4 {
	background-color: #fff;
    color:#444;
}

#section5,#section7,#section7 a {
    color:#f5f5f5;
}

#section6 {
	background-color: #168ccc;
    color:#ddd;
}

footer {
	background-color:#494949;
    color:#ddd;
    min-height:100px;
    padding-top:20px;
    padding-bottom:40px;
}

footer .nav>li>a {
    padding:3px;
    color:#ccc;
}

footer .nav>li>a:hover {
    background-color:transparent;
	color:#fff;
}

.skill-card{
 background-color:rgba(255, 255, 255, 0);
 border:none;
}

.section-title{
	margin-bottom:40px;
}

.justify{
	text-align:justify;
}

.more{
	cursor:pointer;
	margin-top: 100px;
}
.more:after{
	content: "\2026";
}

.circle{
	background: red;
  	border-radius: 200px;
  	color: white;
  	height: 200px;
  	font-weight: bold;
  	width: 200px;
}

.img-bg{
	background-image: url(images/personal1.png);
background-size: cover;
background-position: center center;
background-repeat: no-repeat;
}

.personal{
	width:200px;
}

.header{
	margin-top:50px;
}

